--- a/rossmann-store-sales-prediction-with-xgboost.ipynb
+++ b/rossmann-store-sales-prediction-with-xgboost.ipynb
@@ -1324,341 +1324,6 @@
    "execution_count": 13
   },
   {
-   "metadata": {
-    "_cell_guid": "ea1bf4c7-467a-4553-9b53-d2736d469471",
-    "_uuid": "f208f85e-058b-4834-b399-ef94d9ad464b",
-    "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2025-09-22T14:48:33.937703Z",
-     "iopub.status.busy": "2025-09-22T14:48:33.937331Z",
-     "iopub.status.idle": "2025-09-22T14:48:33.950927Z",
-     "shell.execute_reply": "2025-09-22T14:48:33.949984Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "papermill": {
-     "duration": 0.029055,
-     "end_time": "2025-09-22T14:48:33.952364",
-     "exception": false,
-     "start_time": "2025-09-22T14:48:33.923309",
-     "status": "completed"
-    },
-    "tags": [],
-    "ExecuteTime": {
-     "end_time": "2025-11-23T12:41:08.868786Z",
-     "start_time": "2025-11-23T12:41:08.858264Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# Transpose the DataFrame to view all columns for a few rows\n",
-    "merged_df.head().T"
-   ],
-   "id": "14dc92f6",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                                             0                    1  \\\n",
-       "Store                                        1                    2   \n",
-       "DayOfWeek                                    5                    5   \n",
-       "Date                       2015-07-31 00:00:00  2015-07-31 00:00:00   \n",
-       "Sales                                     5263                 6064   \n",
-       "Customers                                  555                  625   \n",
-       "Open                                         1                    1   \n",
-       "Promo                                        1                    1   \n",
-       "StateHoliday                                 0                    0   \n",
-       "SchoolHoliday                                1                    1   \n",
-       "StoreType                                    c                    a   \n",
-       "Assortment                                   a                    a   \n",
-       "CompetitionDistance                     1270.0                570.0   \n",
-       "CompetitionOpenSinceMonth                  9.0                 11.0   \n",
-       "CompetitionOpenSinceYear                2008.0               2007.0   \n",
-       "Promo2                                       0                    1   \n",
-       "Promo2SinceWeek                            NaN                 13.0   \n",
-       "Promo2SinceYear                            NaN               2010.0   \n",
-       "PromoInterval                              NaN      Jan,Apr,Jul,Oct   \n",
-       "Year                                      2015                 2015   \n",
-       "Month                                        7                    7   \n",
-       "Day                                         31                   31   \n",
-       "WeekOfYear                                  31                   31   \n",
-       "CompetitionOpen                           82.0                 92.0   \n",
-       "\n",
-       "                                             2                    3  \\\n",
-       "Store                                        3                    4   \n",
-       "DayOfWeek                                    5                    5   \n",
-       "Date                       2015-07-31 00:00:00  2015-07-31 00:00:00   \n",
-       "Sales                                     8314                13995   \n",
-       "Customers                                  821                 1498   \n",
-       "Open                                         1                    1   \n",
-       "Promo                                        1                    1   \n",
-       "StateHoliday                                 0                    0   \n",
-       "SchoolHoliday                                1                    1   \n",
-       "StoreType                                    a                    c   \n",
-       "Assortment                                   a                    c   \n",
-       "CompetitionDistance                    14130.0                620.0   \n",
-       "CompetitionOpenSinceMonth                 12.0                  9.0   \n",
-       "CompetitionOpenSinceYear                2006.0               2009.0   \n",
-       "Promo2                                       1                    0   \n",
-       "Promo2SinceWeek                           14.0                  NaN   \n",
-       "Promo2SinceYear                         2011.0                  NaN   \n",
-       "PromoInterval                  Jan,Apr,Jul,Oct                  NaN   \n",
-       "Year                                      2015                 2015   \n",
-       "Month                                        7                    7   \n",
-       "Day                                         31                   31   \n",
-       "WeekOfYear                                  31                   31   \n",
-       "CompetitionOpen                          103.0                 70.0   \n",
-       "\n",
-       "                                             4  \n",
-       "Store                                        5  \n",
-       "DayOfWeek                                    5  \n",
-       "Date                       2015-07-31 00:00:00  \n",
-       "Sales                                     4822  \n",
-       "Customers                                  559  \n",
-       "Open                                         1  \n",
-       "Promo                                        1  \n",
-       "StateHoliday                                 0  \n",
-       "SchoolHoliday                                1  \n",
-       "StoreType                                    a  \n",
-       "Assortment                                   a  \n",
-       "CompetitionDistance                    29910.0  \n",
-       "CompetitionOpenSinceMonth                  4.0  \n",
-       "CompetitionOpenSinceYear                2015.0  \n",
-       "Promo2                                       0  \n",
-       "Promo2SinceWeek                            NaN  \n",
-       "Promo2SinceYear                            NaN  \n",
-       "PromoInterval                              NaN  \n",
-       "Year                                      2015  \n",
-       "Month                                        7  \n",
-       "Day                                         31  \n",
-       "WeekOfYear                                  31  \n",
-       "CompetitionOpen                            3.0  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Store</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DayOfWeek</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <td>2015-07-31 00:00:00</td>\n",
-       "      <td>2015-07-31 00:00:00</td>\n",
-       "      <td>2015-07-31 00:00:00</td>\n",
-       "      <td>2015-07-31 00:00:00</td>\n",
-       "      <td>2015-07-31 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sales</th>\n",
-       "      <td>5263</td>\n",
-       "      <td>6064</td>\n",
-       "      <td>8314</td>\n",
-       "      <td>13995</td>\n",
-       "      <td>4822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Customers</th>\n",
-       "      <td>555</td>\n",
-       "      <td>625</td>\n",
-       "      <td>821</td>\n",
-       "      <td>1498</td>\n",
-       "      <td>559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Open</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Promo</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>StateHoliday</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SchoolHoliday</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>StoreType</th>\n",
-       "      <td>c</td>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
-       "      <td>c</td>\n",
-       "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Assortment</th>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
-       "      <td>a</td>\n",
-       "      <td>c</td>\n",
-       "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CompetitionDistance</th>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>570.0</td>\n",
-       "      <td>14130.0</td>\n",
-       "      <td>620.0</td>\n",
-       "      <td>29910.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CompetitionOpenSinceMonth</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CompetitionOpenSinceYear</th>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Promo2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Promo2SinceWeek</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Promo2SinceYear</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PromoInterval</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Jan,Apr,Jul,Oct</td>\n",
-       "      <td>Jan,Apr,Jul,Oct</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month</th>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Day</th>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WeekOfYear</th>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CompetitionOpen</th>\n",
-       "      <td>82.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 14
-  },
-  {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
@@ -3706,6 +3371,114 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "### Linear Regression Model",
+   "id": "15fb99fa18a20b5b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T18:39:46.971301Z",
+     "start_time": "2025-11-23T18:39:46.954926Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "from sklearn.linear_model import LinearRegression\n",
+   "id": "484fc43139ec75f2",
+   "outputs": [],
+   "execution_count": 70
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T18:39:48.784465Z",
+     "start_time": "2025-11-23T18:39:48.258118Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "lr_model = LinearRegression()\n",
+    "lr_model.fit(X_train, y_train)\n"
+   ],
+   "id": "f8deea8618dff580",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 71
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T18:40:11.538527Z",
+     "start_time": "2025-11-23T18:40:11.360975Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "y_train_lr = lr_model.predict(X_train)\n",
+    "y_val_lr = lr_model.predict(X_val)\n"
+   ],
+   "id": "8211469bce84f2bc",
+   "outputs": [],
+   "execution_count": 74
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T18:40:50.779166Z",
+     "start_time": "2025-11-23T18:40:50.771249Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def rmse(a, b):\n",
+    "    return np.sqrt(np.mean((a - b)**2))"
+   ],
+   "id": "e1d84a100e8dc202",
+   "outputs": [],
+   "execution_count": 77
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T18:40:52.217971Z",
+     "start_time": "2025-11-23T18:40:52.190450Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "train_rmse_lr = rmse(y_train_lr, y_train)\n",
+    "val_rmse_lr = rmse(y_val_lr, y_val)\n",
+    "\n",
+    "print(\"Linear Regression Train RMSE:\", train_rmse_lr)\n",
+    "print(\"Linear Regression Validation RMSE:\", val_rmse_lr)\n"
+   ],
+   "id": "96481a629801061e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression Train RMSE: 2726.369329764344\n",
+      "Linear Regression Validation RMSE: 2735.544625613644\n"
+     ]
+    }
+   ],
+   "execution_count": 78
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 4. Modeling with XGBoost\n",
     "\n",
@@ -4742,7 +4515,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Model metrics in report",
+   "source": "# Model metrics in report",
    "id": "2961c5bcc1963f1d"
   },
   {
